# 2025-isaac-ros-visual-slam-on-autosdv

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  README.md  justfile
docs/: ZEDXM_SETUP.md  path.txt  record_topics.txt  replay_topics.txt  slam_topics.txt
scripts/: download_assets.sh
src/slam_launch/: CMakeLists.txt  package.xml
src/slam_launch/config/: zedxm.yaml  zedxm_quickstart_interface_specs.json
src/slam_launch/launch/: visual_slam.launch.xml  zed2_visual_slam.launch.xml  zedxm_visual_slam.launch.xml
src/slam_launch/rviz/: isaac_zedxm.rviz
