<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_launch</name>
  <version>0.1.0</version>
  <description>Launch files for Isaac ROS Visual SLAM</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>isaac_ros_examples</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>isaac_ros_stereo_image_proc</exec_depend>
  <exec_depend>isaac_ros_zed</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
